--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
             </ul>
         </nav>
     </header>
-    <figure class="hero"></figure>
-    <main class="content"> 
-        <section id="search-engine-optimization" class="search-engine-optimization"> 
+    <figure></figure>
+    <main> 
+        <section id="search-engine-optimization"> 
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Wood table with computer, magnifying glass, pens and a notebook on top. The notebook says SEO in the middle with the words content, heading, mobile compatibility, social media, link building and backlink around it."/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Person holding phone and looking at laptop. The laptop has graphs, charts and the word Reputation on the screen."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="People sitting around a table with their computers. The table is covered with social media icons and phrases."/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -48,22 +48,22 @@
             </p>
         </section>
     </main>
-    <aside class="benefits">
-        <section class="benefit-lead">
+    <aside>
+        <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="cog funneling into money"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="person wearing a tie with a lightbulb as a head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="cog wheel surrounded by dollar signs"></img>
             <p>
